--- a/app/src/main/res/layout/activity_buckconverter.xml
+++ b/app/src/main/res/layout/activity_buckconverter.xml
@@ -44,6 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Voltage"
+                android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
 
@@ -52,6 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
+                android:layout_marginLeft="5dp"
                 android:hint="Enter Voltage..."/>
 
             <TextView
@@ -59,6 +61,7 @@
                 android:layout_height="wrap_content"
                 android:text="Resistance(ohm)"
                 android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -66,13 +69,15 @@
                 android:layout_width="match_parent"
                 android:inputType="numberDecimal"
                 android:layout_height="wrap_content"
-                android:hint="Enter Resistnce..."/>
+                android:layout_marginLeft="5dp"
+                android:hint="Enter Resistance..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Capacitance(in micro F)"
                 android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -80,6 +85,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
+                android:layout_marginLeft="5dp"
                 android:hint="Enter Capacitance..."/>
 
             <TextView
@@ -87,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:text="Inductance(in milli H)"
                 android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -94,6 +101,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
+                android:layout_marginLeft="5dp"
                 android:hint="Enter Inductance..."/>
 
             <TextView
@@ -101,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:text="T_on(in milli sec)"
                 android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -108,6 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
+                android:layout_marginLeft="5dp"
                 android:hint="Enter on time period..."/>
 
             <TextView
@@ -115,6 +125,7 @@
                 android:layout_height="wrap_content"
                 android:text="T_off(in milli sec)"
                 android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -122,12 +133,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
+                android:layout_marginLeft="5dp"
                 android:hint="Enter off time period..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Initial Capacitance Voltage"
+                android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
 
@@ -135,6 +148,7 @@
                 android:id="@+id/vc_initial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:inputType="numberDecimal"
                 android:hint="Enter initial Capacitor Voltage"/>
 
@@ -143,6 +157,7 @@
                 android:layout_height="wrap_content"
                 android:text="Initial Inductor Current"
                 android:textColor="@color/black"
+                android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -150,12 +165,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:hint="Enter initial Inductance Current"/>
+                android:hint="Enter initial Inductance Current"
+                android:layout_marginLeft="5dp" />
+
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Total time for simulation"
+                android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
 
@@ -164,7 +182,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:hint="Enter Total Time"/>
+                android:hint="Enter Total Time"
+                android:layout_marginLeft="5dp"/>
+
 
             <Button
                 android:layout_width="wrap_content"
