--- a/app/src/main/res/layout/activity_buck_il_t.xml
+++ b/app/src/main/res/layout/activity_buck_il_t.xml
@@ -9,15 +9,16 @@
 
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
+        android:layout_margin="25dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.github.mikephil.charting.charts.LineChart>
 
     <TextView
         android:id="@+id/display"
+        android:text="Il vs t"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Voltage"
         android:textColor="@color/black"
         android:textSize="21dp"/>
 
