changes in margins

--- a/app/src/main/res/layout/activity_boost_convertor.xml
+++ b/app/src/main/res/layout/activity_boost_convertor.xml
@@ -44,6 +44,7 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Voltage"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -52,12 +53,14 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:layout_marginLeft="5dp"
             android:hint="Enter Voltage..."/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Resistance(ohm)"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -65,6 +68,7 @@ android:fillViewport="true">
             android:id="@+id/resistance"
             android:layout_width="match_parent"
             android:inputType="numberDecimal"
+            android:layout_marginLeft="5dp"
             android:layout_height="wrap_content"
             android:hint="Enter Resistnce..."/>
 
@@ -73,6 +77,7 @@ android:fillViewport="true">
             android:layout_height="wrap_content"
             android:text="Capacitance(in micro F)"
             android:textColor="@color/black"
+            android:layout_marginLeft="5dp"
             android:textSize="21dp"/>
 
         <EditText
@@ -80,12 +85,14 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:layout_marginLeft="5dp"
             android:hint="Enter Capacitance..."/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Inductance(in milli H)"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -93,6 +100,7 @@ android:fillViewport="true">
             android:id="@+id/inductance"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:inputType="numberDecimal"
             android:hint="Enter Inductance..."/>
 
@@ -100,6 +108,7 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="T_on(in milli sec)"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -107,6 +116,7 @@ android:fillViewport="true">
             android:id="@+id/t_on"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:inputType="numberDecimal"
             android:hint="Enter on time period..."/>
 
@@ -114,6 +124,7 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="T_off(in milli sec)"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -121,6 +132,7 @@ android:fillViewport="true">
             android:id="@+id/t_off"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:inputType="numberDecimal"
             android:hint="Enter off time period..."/>
 
@@ -128,6 +140,7 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Initial Capacitance Voltage"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -135,6 +148,7 @@ android:fillViewport="true">
             android:id="@+id/vc_initial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:inputType="numberDecimal"
             android:hint="Enter initial Capacitor Voltage"/>
 
@@ -142,6 +156,7 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Initial Inductor Current"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -149,6 +164,7 @@ android:fillViewport="true">
             android:id="@+id/il_initial"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:inputType="numberDecimal"
             android:hint="Enter initial Inductance Current"/>
 
@@ -156,6 +172,7 @@ android:fillViewport="true">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Total time for simulation"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -163,6 +180,7 @@ android:fillViewport="true">
             android:id="@+id/t_tot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:inputType="numberDecimal"
             android:hint="Enter Total Time"/>
 
