--- a/app/src/main/res/layout/activity_rl_circuit.xml
+++ b/app/src/main/res/layout/activity_rl_circuit.xml
@@ -44,6 +44,7 @@ android:fillViewport="false">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Voltage"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -52,12 +53,14 @@ android:fillViewport="false">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
+            android:layout_marginLeft="5dp"
             android:hint="Enter Voltage..."/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Resistance"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
@@ -65,6 +68,7 @@ android:fillViewport="false">
             android:id="@+id/resistance"
             android:layout_width="match_parent"
             android:inputType="numberDecimal"
+            android:layout_marginLeft="5dp"
             android:layout_height="wrap_content"
             android:hint="Enter Resistnce..."/>
 
@@ -72,11 +76,13 @@ android:fillViewport="false">
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Inductance"
+            android:layout_marginLeft="5dp"
             android:textColor="@color/black"
             android:textSize="21dp"/>
 
         <EditText
             android:id="@+id/inductance"
+            android:layout_marginLeft="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="numberDecimal"
