Added graphs for boost

--- a/app/src/main/res/layout/activity_boost_convertor.xml
+++ b/app/src/main/res/layout/activity_boost_convertor.xml
@@ -31,7 +31,7 @@ android:fillViewport="true">
             android:textColor="@color/white"
             android:textSize="35dp"
             android:textStyle="bold"
-            android:text="Buck Converter"/>
+            android:text="Boost Converter"/>
 
         <ImageView
             android:layout_width="fill_parent"
