--- a/app/src/main/res/layout/activity_result_boost.xml
+++ b/app/src/main/res/layout/activity_result_boost.xml
@@ -1,9 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".resultBoost">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:gravity="center"
+android:orientation="vertical"
+tools:context=".resultBoost">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<Button
+    android:id="@+id/btna"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:text="Capacitance Voltage vs Time" />
+
+<Button
+    android:id="@+id/btnb"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:text="Inductor Voltage vs Time" />
+
+<Button
+    android:id="@+id/btnc"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:text="Output Current vs Time" />
+
+<Button
+    android:id="@+id/btnd"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:text="Inductor Current vs Time" />
+
+<Button
+    android:id="@+id/btne"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:text="Line Chart 2 Demo" />
+
+</LinearLayout>
