--- a/app/src/main/res/layout/activity_result_buck.xml
+++ b/app/src/main/res/layout/activity_result_buck.xml
@@ -40,6 +40,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Line Chart 2 Demo" />
+        android:text="All in one" />
 
 </LinearLayout>
