Basic changes + added files for rl and rc

--- a/app/src/main/res/layout/activity_buckconverter.xml
+++ b/app/src/main/res/layout/activity_buckconverter.xml
@@ -43,7 +43,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Voltage"
+                android:text="Voltage Vin (V)"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
@@ -54,12 +54,12 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:layout_marginLeft="5dp"
-                android:hint="Enter Voltage..."/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Resistance(ohm)"
+                android:text="Resistance (Ω)"
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
@@ -70,12 +70,12 @@
                 android:inputType="numberDecimal"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:hint="Enter Resistance..."/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Capacitance(in micro F)"
+                android:text="Capacitance(µF)"
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
@@ -86,12 +86,12 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:layout_marginLeft="5dp"
-                android:hint="Enter Capacitance..."/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Inductance(in milli H)"
+                android:text="Inductance (mH)"
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
@@ -102,12 +102,12 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:layout_marginLeft="5dp"
-                android:hint="Enter Inductance..."/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="T_on(in milli sec)"
+                android:text="T_on (ms)"
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
@@ -118,12 +118,12 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:layout_marginLeft="5dp"
-                android:hint="Enter on time period..."/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="T_off(in milli sec)"
+                android:text="T_off (ms)"
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
@@ -134,12 +134,12 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:layout_marginLeft="5dp"
-                android:hint="Enter off time period..."/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Initial Capacitance Voltage"
+                android:text="Initial Capacitor Voltage (V)"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
@@ -150,12 +150,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:inputType="numberDecimal"
-                android:hint="Enter initial Capacitor Voltage"/>
+                android:hint="Enter value..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Initial Inductor Current"
+                android:text="Initial Inductor Current (A)"
                 android:textColor="@color/black"
                 android:layout_marginLeft="5dp"
                 android:textSize="21dp"/>
@@ -165,14 +165,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:hint="Enter initial Inductance Current"
+                android:hint="Enter value..."
                 android:layout_marginLeft="5dp" />
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Total time for simulation"
+                android:text="Total time for simulation (s)"
                 android:layout_marginLeft="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
@@ -182,7 +182,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:hint="Enter Total Time"
+                android:hint="Enter value..."
                 android:layout_marginLeft="5dp"/>
 
 
