--- a/app/src/main/res/layout/activity_result_buck.xml
+++ b/app/src/main/res/layout/activity_result_buck.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Capacitance Voltage vs Time" />
+        android:text="Output/Capacitor Voltage vs Time" />
 
     <Button
         android:id="@+id/btnb"
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Output Current vs Time" />
+        android:text="Load Current vs Time" />
 
     <Button
         android:id="@+id/btnd"
